Fix bug in Camera2D drag margins
- Fix incorrect calculation of drag margin that cause the viewport to rapidly teleport if sum of margin is greater than 1.
- Sync transform in CollisionObject2D now only update position or rotation if they actually changed.
- Update JacksonYAML to 3.1.0.